--- a/idol_gallery/idol_detail/momoka.html
+++ b/idol_gallery/idol_detail/momoka.html
@@ -3819,10 +3819,10 @@ kg
                     "story_id": "380",
                     "story_title": "ブルーミングシャイン",
                     "voice_enable": ["1", "1"],
-                    "flash_path": ["../../idol_story/movie_play/380/1/idol_gallery--idol_detail--__hash_card_id__--2", 
-                                   "../../idol_story/movie_play/380/2/idol_gallery--idol_detail--__hash_card_id__--2"],
-                    "voice_url": ["../../idol_story/sound_play/380/1/idol_gallery/__hash_card_id__", 
-                                  "../../idol_story/sound_play/380/2/idol_gallery/__hash_card_id__"],
+                    "flash_path": ["../../idol_story/movie_play/380/1.html", 
+                                   "../../idol_story/movie_play/380/2.html"],
+                    "voice_url": ["../../idol_story/sound_play/380/1.html", 
+                                  "../../idol_story/sound_play/380/2.html"],
                     "open_flag": ["1", "1"],
                     "icon": ["../../image_sp/ui/episode/base/015.jpg", 
                              "../../image_sp/ui/episode/epi_button_movie_380_2.jpg"],
@@ -3832,10 +3832,10 @@ kg
                     "story_id": "303",
                     "story_title": "アフタヌーンローズ",
                     "voice_enable": ["1", "1"],
-                    "flash_path": ["../../idol_story/movie_play/303/1/idol_gallery--idol_detail--__hash_card_id__--2", 
-                                   "../../idol_story/movie_play/303/2/idol_gallery--idol_detail--__hash_card_id__--2"],
-                    "voice_url": ["../../idol_story/sound_play/303/1/idol_gallery/__hash_card_id__", 
-                                  "../../idol_story/sound_play/303/2/idol_gallery/__hash_card_id__"],
+                    "flash_path": ["../../idol_story/movie_play/303/1.html", 
+                                   "../../idol_story/movie_play/303/2.html"],
+                    "voice_url": ["../../idol_story/sound_play/303/1.html", 
+                                  "../../idol_story/sound_play/303/2.html"],
                     "open_flag": ["1", "1"],
                     "icon": ["../../image_sp/ui/episode/base/015.jpg", 
                              "../../image_sp/ui/episode/epi_button_movie_303_2.jpg"],
@@ -3845,10 +3845,10 @@ kg
                     "story_id": "263",
                     "story_title": "綿雪の戯れ",
                     "voice_enable": ["1", "1"],
-                    "flash_path": ["../../idol_story/movie_play/263/1/idol_gallery--idol_detail--__hash_card_id__--2", 
-                                   "../../idol_story/movie_play/263/2/idol_gallery--idol_detail--__hash_card_id__--2"],
-                    "voice_url": ["../../idol_story/sound_play/263/1/idol_gallery/__hash_card_id__", 
-                                  "../../idol_story/sound_play/263/2/idol_gallery/__hash_card_id__"],
+                    "flash_path": ["../../idol_story/movie_play/263/1.html", 
+                                   "../../idol_story/movie_play/263/2.html"],
+                    "voice_url": ["../../idol_story/sound_play/263/1.html", 
+                                  "../../idol_story/sound_play/263/2.html"],
                     "open_flag": ["1", "1"],
                     "icon": ["../../image_sp/ui/episode/base/015.jpg",
                              "../../image_sp/ui/episode/epi_button_movie_263_2.jpg"],
@@ -3858,10 +3858,10 @@ kg
                     "story_id": "227",
                     "story_title": "ひと夏の華",
                     "voice_enable": ["1", "1"],
-                    "flash_path": ["../../idol_story/movie_play/227/1/idol_gallery--idol_detail--__hash_card_id__--2", 
-                                   "../../idol_story/movie_play/227/2/idol_gallery--idol_detail--__hash_card_id__--2"],
-                    "voice_url": ["../../idol_story/sound_play/227/1/idol_gallery/__hash_card_id__", 
-                                  "../../idol_story/sound_play/227/2/idol_gallery/__hash_card_id__"],
+                    "flash_path": ["../../idol_story/movie_play/227/1.html", 
+                                   "../../idol_story/movie_play/227/2.html"],
+                    "voice_url": ["../../idol_story/sound_play/227/1.html", 
+                                  "../../idol_story/sound_play/227/2.html"],
                     "open_flag": ["1", "1"],
                     "icon": ["../../image_sp/ui/episode/base/015.jpg", 
                              "../../image_sp/ui/episode/epi_button_movie_227_2.jpg"],
@@ -3871,10 +3871,10 @@ kg
                     "story_id": "190",
                     "story_title": "新春☆開運招福",
                     "voice_enable": ["0", "0"],
-                    "flash_path": ["../../idol_story/movie_play/190/1/idol_gallery--idol_detail--__hash_card_id__--2", 
-                                   "../../idol_story/movie_play/190/2/idol_gallery--idol_detail--__hash_card_id__--2"],
-                    "voice_url": ["../../idol_story/sound_play/190/1/idol_gallery/__hash_card_id__", 
-                                  "../../idol_story/sound_play/190/2/idol_gallery/__hash_card_id__"],
+                    "flash_path": ["../../idol_story/movie_play/190/1.html", 
+                                   "../../idol_story/movie_play/190/2.html"],
+                    "voice_url": ["../../idol_story/sound_play/190/1.html", 
+                                  "../../idol_story/sound_play/190/2.html"],
                     "open_flag": ["1", "1"],
                     "icon": ["../../image_sp/ui/episode/epi_button_movie_190_1.jpg", 
                              "../../image_sp/ui/episode/epi_button_movie_190_2.jpg"],
@@ -3888,12 +3888,12 @@ kg
                         "4": "1"
                     },
                     "flash_path": {
-                        "1": "../../idol_story/movie_play/150/2/idol_gallery--idol_detail--__hash_card_id__--2",
-                        "4": "../../idol_story/movie_play/150/5/idol_gallery--idol_detail--__hash_card_id__--2"
+                        "1": "../../idol_story/movie_play/150/2.html",
+                        "4": "../../idol_story/movie_play/150/5.html"
                     },
                     "voice_url": {
-                        "1": "../../idol_story/sound_play/150/2/idol_gallery/__hash_card_id__",
-                        "4": "../../idol_story/sound_play/150/5/idol_gallery/__hash_card_id__"
+                        "1": "../../idol_story/sound_play/150/2.html",
+                        "4": "../../idol_story/sound_play/150/5.html"
                     },
                     "open_flag": {
                         "1": "1",
@@ -3911,10 +3911,10 @@ kg
                     "story_id": "114",
                     "story_title": "アイドルプロデュース the 4th Anniversary",
                     "voice_enable": ["1", "1"],
-                    "flash_path": ["../../idol_story/movie_play/114/1/idol_gallery--idol_detail--__hash_card_id__--2", 
-                                   "../../idol_story/movie_play/114/2/idol_gallery--idol_detail--__hash_card_id__--2"],
-                    "voice_url": ["../../idol_story/sound_play/114/1/idol_gallery/__hash_card_id__", 
-                                  "../../idol_story/sound_play/114/2/idol_gallery/__hash_card_id__"],
+                    "flash_path": ["../../idol_story/movie_play/114/1.html", 
+                                   "../../idol_story/movie_play/114/2.html"],
+                    "voice_url": ["../../idol_story/sound_play/114/1.html", 
+                                  "../../idol_story/sound_play/114/2.html"],
                     "open_flag": ["1", "1"],
                     "icon": ["../../image_sp/ui/episode/epi_button_movie_114_1.jpg", 
                              "../../image_sp/ui/episode/epi_button_movie_114_2.jpg"],
@@ -3928,12 +3928,12 @@ kg
                         "5": "0"
                     },
                     "flash_path": {
-                        "2": "../../idol_story/movie_play/69/3/idol_gallery--idol_detail--__hash_card_id__--2",
-                        "5": "../../idol_story/movie_play/69/6/idol_gallery--idol_detail--__hash_card_id__--2"
+                        "2": "../../idol_story/movie_play/69/3.html",
+                        "5": "../../idol_story/movie_play/69/6.html"
                     },
                     "voice_url": {
-                        "2": "../../idol_story/sound_play/69/3/idol_gallery/__hash_card_id__",
-                        "5": "../../idol_story/sound_play/69/6/idol_gallery/__hash_card_id__"
+                        "2": "../../idol_story/sound_play/69/3.html",
+                        "5": "../../idol_story/sound_play/69/6.html"
                     },
                     "open_flag": {
                         "2": "1",
