--- a/idol_gallery/idol_detail/momoka_k.html
+++ b/idol_gallery/idol_detail/momoka_k.html
@@ -366,7 +366,7 @@
 <div class="title hgt"></div><div class="pr"><%- profile.card_height %>cm</div>
 </div>
 <div class="blk">
-<div class="title age"></div><div class="pr"><%- profile.card_age %>歳</div>
+<div class="title age"></div><div class="pr"><%- profile.card_age %>세</div>
 </div>
 </div>
 <div class="data_list">
@@ -393,7 +393,7 @@ kg
 </div>
 <div class="data_list">
 <div class="blk">
-<div class="title bld"></div><div class="pr"><%- profile.card_blood %>型</div>
+<div class="title bld"></div><div class="pr"><%- profile.card_blood %>형</div>
 </div>
 <div class="blk">
 <div class="title arm"></div><div class="pr"><%- profile.card_arm %></div>
@@ -4373,24 +4373,24 @@ kg
                 }
             };
             var type_names = {
-                "idol": "アイドルコメント",
-                "my": "マイスタジオ",
-                "my_max": "マイスタジオ(親愛度MAX)",
-                "work": "お仕事",
-                "work_love_up": "お仕事(親愛度UP)",
-                "work_max": "お仕事(親愛度MAX)",
-                "live": "LIVEバトル",
-                "love_max": "親愛度MAX演出"
+                "idol": "아이돌코멘트",
+                "my": "마이스튜디오",
+                "my_max": "마이스튜디오(친애도MAX)",
+                "work": "영업",
+                "work_love_up": "영업(친애도UP)",
+                "work_max": "영업(친애도MAX)",
+                "live": "LIVE배틀",
+                "love_max": "친애도MAX연출"
             };
             var category_names = {
-                "greeting": "あいさつ",
-                "work": "お仕事",
-                "love_max": "親愛度MAX"
+                "greeting": "인사",
+                "work": "영업",
+                "love_max": "친애도MAX"
             };
             var conditions_names = {
-                "none": "条件無し",
-                "get_idol": "アイドルが所属すると閲覧できます",
-                "love_max": "親愛度をMAXにすると閲覧できます"
+                "none": "조건없음",
+                "get_idol": "아이돌이 소속되면 볼 수 있습니다.",
+                "love_max": "친애도를 MAX로 하면 볼 수 있습니다."
             };
             var comment_tab_start = null;
             var show_premium = true;
