--- a/idol_gallery/idol_detail/momoka_k.html
+++ b/idol_gallery/idol_detail/momoka_k.html
@@ -297,18 +297,18 @@
         </style>
         <script type="text/template" id="tab-4-template">
             <div id="contents_tab" class="tab_common-large m-Top4 m-Btm8" style="font-size:11px">
-<a name="tab_1" href="#" class="tab_line_4 tab_text selected" style="font-size:11px;">プロフィール</a>
-<a name="tab_2" href="#" class="tab_line_4 tab_text js_tab_comment_list" style="font-size:11px;">セリフ一覧</a>
-<a name="tab_3" href="#" class="tab_line_4 tab_text" style="font-size:11px;">エピソード</a>
-<a name="tab_4" href="#" class="tab_line_4 tab_text" style="font-size:11px;">アイドル情報</a>
+<a name="tab_1" href="#" class="tab_line_4 tab_text selected" style="font-size:11px;">프로필</a>
+<a name="tab_2" href="#" class="tab_line_4 tab_text js_tab_comment_list" style="font-size:11px;">대사 일람</a>
+<a name="tab_3" href="#" class="tab_line_4 tab_text" style="font-size:11px;">에피소드</a>
+<a name="tab_4" href="#" class="tab_line_4 tab_text" style="font-size:11px;">아이돌 정보</a>
 </div>
 </script>
         <script type="text/template" id="tab-3-template">
             <div id="contents_tab" class="tab_common-large m-Top4 m-Btm8">
-<a name="tab_1" class="tab_line_3 tab_text" href="#">プロフィール</a>
-<a name="tab_2" class="tab_line_3 tab_text js_tab_comment_list" href="#">セリフ一覧</a>
-<a name="tab_3" href="#" style='display:none;'>エピソード</a>
-<a name="tab_4" class="tab_line_3 tab_text" href="#">アイドル情報</a>
+<a name="tab_1" class="tab_line_3 tab_text" href="#">프로필</a>
+<a name="tab_2" class="tab_line_3 tab_text js_tab_comment_list" href="#">대사 일람</a>
+<a name="tab_3" href="#" style='display:none;'>에피소드</a>
+<a name="tab_4" class="tab_line_3 tab_text" href="#">아이돌 정보</a>
 </div>
 </script>
         <script type="text/template" id="idol-base-template">
@@ -736,18 +736,18 @@ kg
                 var idol = {};
                 idol.detail_list = [{
                     "data": {
-                        "card_name": "櫻井桃華",
+                        "card_name": "사쿠라이 모모카",
                         "rarity": "1",
                         "cost": "8",
                         "attribute": "cute",
-                        "skill_name": "ｷｭｰﾃｨｱｸﾄ",
+                        "skill_name": "큐티 액트",
                         "skill_effect": "",
                         "grow_idol_flag": "",
                         "default_attack": "640",
                         "default_defense": "960",
                         "hash_card_id": "1cefdef7df7c14eca803910b67e61dfc",
                         "alias_name": "",
-                        "real_name": "櫻井桃華"
+                        "real_name": "사쿠라이모모카"
                     },
                     "profile": {
                         "card_id": "1001501",
@@ -813,18 +813,18 @@ kg
                     "is_max_love": true
                 }, {
                     "data": {
-                        "card_name": "櫻井桃華+",
+                        "card_name": "사쿠라이 모모카+",
                         "rarity": "2",
                         "cost": "8",
                         "attribute": "cute",
-                        "skill_name": "ｷｭｰﾃｨｱｸﾄ",
+                        "skill_name": "큐티 액트",
                         "skill_effect": "",
                         "grow_idol_flag": "",
                         "default_attack": "768",
                         "default_defense": "1152",
                         "hash_card_id": "fe2f3ecbf682014be99d3f94512a48bd",
                         "alias_name": "",
-                        "real_name": "櫻井桃華+"
+                        "real_name": "사쿠라이모모카+"
                     },
                     "profile": {
                         "card_id": "1101502",
@@ -880,7 +880,7 @@ kg
                         "101": {
                             "event_id": 101,
                             "category_id": "10060",
-                            "event_name": "星降るクリスマス"
+                            "event_name": "별이 쏟아지는 크리스마스"
                         }
                     },
                     "release": "",
@@ -896,18 +896,18 @@ kg
                     "is_max_love": true
                 }, {
                     "data": {
-                        "card_name": "[ﾒﾙﾍﾝ&ｺﾞｼｯｸ]櫻井桃華",
+                        "card_name": "[메르헨&고딕]사쿠라이 모모",
                         "rarity": "3",
                         "cost": "13",
                         "attribute": "cute",
                         "skill_name": "ﾌﾘﾙﾄﾞｹｰｼﾞ",
-                        "skill_effect": "ｷｭｰﾄの攻 ﾗﾝﾀﾞﾑで中～特大ｱｯﾌﾟ",
+                        "skill_effect": "큐트의 공 랜덤하게 중～특대 업",
                         "grow_idol_flag": "",
                         "default_attack": "3040",
                         "default_defense": "2000",
                         "hash_card_id": "2b676cf6e1bd042f04a6e8367ac47fdd",
-                        "alias_name": "ﾒﾙﾍﾝ&ｺﾞｼｯｸ",
-                        "real_name": "櫻井桃華"
+                        "alias_name": "메르헨&고딕",
+                        "real_name": "사쿠라이모모카"
                     },
                     "profile": {
                         "card_id": "1208201",
