--- a/idol_story/movie_play/114/1.html
+++ b/idol_story/movie_play/114/1.html
@@ -16,7 +16,7 @@
     <script>
         $(document).ready(function() {
             if (typeof newrelic === 'object' && typeof newrelic.setPageViewName === 'function') {
-                newrelic.setPageViewName('/idolmaster/index.php/smart_phone_flash/convert/idol_storySsSsflashSsSs114SsSs1SsSs1SsSsidol_story--index--1--3---keyword----ももか-----next----1SsSs1/0/0/0/1/1/1/0/1');
+                newrelic.setPageViewName('/idolmaster/index.php/smart_phone_flash/convert/idol_story');
             }
         });
     </script>
