--- a/idol_gallery/idol_detail/momoka_k.html
+++ b/idol_gallery/idol_detail/momoka_k.html
@@ -3909,7 +3909,7 @@ kg
                     }
                 }, {
                     "story_id": "114",
-                    "story_title": "アイドルプロデュース the 4th Anniversary",
+                    "story_title": "아이돌 프로듀스 the 4th Anniversary",
                     "voice_enable": ["1", "1"],
                     "flash_path": ["../../idol_story/movie_play/114/1_k.html", 
                                    "../../idol_story/movie_play/114/2_k.html"],
@@ -3922,7 +3922,7 @@ kg
                                          "../../image_sp/ui/episode/epi_button_moviename_cute_special_2.png"]
                 }, {
                     "story_id": "69",
-                    "story_title": "イタズラ小悪魔バレンタイン",
+                    "story_title": "장난 소악마 발렌타인",
                     "voice_enable": {
                         "2": "0",
                         "5": "0"
