--- a/idol_gallery/idol_detail/ranko.html
+++ b/idol_gallery/idol_detail/ranko.html
@@ -8,8 +8,8 @@
     <meta http-equiv="expires" content="-1">
     <meta name="format-detection" content="telephone=no">
     <title>アイドルマスター シンデレラガールズ</title>
-    <link rel="stylesheet" type="text/css" href="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/css/rich/new_mypage_common.css" media="all">
-    <link rel="apple-touch-icon-precomposed" href="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/icon_bookmark.png">
+    <link rel="stylesheet" type="text/css" href="../../css/rich/new_mypage_common.css" media="all">
+    <link rel="apple-touch-icon-precomposed" href="../../image_sp/ui/icon_bookmark.png">
     <script>
         (function() {
             window.console.log = function() {};
@@ -35,11 +35,11 @@
             document.write('<meta name="viewport" content="width=device-width, user-scalable=no">');
         }
     </script>
-    <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/jquery-2.2.2.min.js"></script>
+    <script src="../../js/jquery-2.2.2.min.js"></script>
     <script>
         (function() {
             window.viewer_id = 157584791;
-            var _url = "http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/game_error/report_js_error";
+            var _url = "../../game_error/report_js_error";
             var _path = location.href;
             var _spec_obj;
             var _spec = 'none';
@@ -64,22 +64,22 @@
             }
         })();
     </script>
-    <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/underscore-min.js"></script>
-    <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/require.js"></script>
-    <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/require.js"></script>
+    <script src="../../js/underscore-min.js"></script>
+    <script src="../../js/require.js"></script>
+    <script src="../../js/require.js"></script>
     <script>
         requirejs.config({
             paths: {
-                easeljs: "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/easeljs-0.8.2.min.js",
-                easeljs_0_7_1: "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/easeljs-0.7.1.min.js", //スプライトを読むためのバージョン
-                tweenjs: "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/tweenjs-0.6.2.min.js",
-                movieclipjs: "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/movieclip-0.7.1.min.js",
-                createjs: "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/createjs-2015.11.26.min.js",
+                easeljs: "../../js/easeljs-0.8.2.min.js",
+                easeljs_0_7_1: "../../js/easeljs-0.7.1.min.js", //スプライトを読むためのバージョン
+                tweenjs: "../../js/tweenjs-0.6.2.min.js",
+                movieclipjs: "../../js/movieclip-0.7.1.min.js",
+                createjs: "../../js/createjs-2015.11.26.min.js",
             }
         })
     </script>
-    <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/common.js"></script>
-    <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/common_new.js"></script>
+    <script src="../../js/common.js"></script>
+    <script src="../../js/common_new.js"></script>
     <script>
         $(function() {
             window.$ibox = $('.ibox').ibox();
@@ -98,14 +98,14 @@
             chrome_app_flg = 0,
             chrome_app_extension_id = 'dnacabmnfmejgfffmcehejcmiciinpej';
     </script>
-    <script type='text/javascript' src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/app_sound.js'></script>
-    <link rel="stylesheet" type="text/css" href="http://sp.pf-img-a.mbga.jp/css/base.css?20171116" />
+    <script type='text/javascript' src='../../js/app_sound.js'></script>
+    <link rel="stylesheet" type="text/css" href="../../css/base.css" />
 </head>
 
 <body id="idol_gallery" class="idol_detail">
     <div id="top" class="page_container jsOnBtn">
         <input id="delay" type="hidden" value="0">
-        <link rel="stylesheet" type="text/css" href="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/css/rich/idol_gallery.css" media="all">
+        <link rel="stylesheet" type="text/css" href="../../css/rich/idol_gallery.css" media="all">
         <style>
             .idolProfile {
                 margin-bottom: 0;
@@ -298,12 +298,12 @@
             }
 
             .ep_on {
-                background: url('http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/rich/icon/icon_checkbox_on.png') no-repeat 35px 5px;
+                background: url('../../image_sp/ui/rich/icon/icon_checkbox_on.png') no-repeat 35px 5px;
                 background-size: 21px;
             }
 
             .ep_off {
-                background: url('http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/ui/rich/icon/icon_checkbox_off.png') no-repeat 35px 5px;
+                background: url('../../image_sp/ui/rich/icon/icon_checkbox_off.png') no-repeat 35px 5px;
                 background-size: 21px;
             }
             -->
@@ -4521,21 +4521,21 @@ kg
                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/a8966398cde53faf1eea3197d044fa09.jpg", 
                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/0cf0c9dda3969d5e0849f82ef76e3316.jpg", 
                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/3986012e2714597c8db0358919b7fcbf.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/46d53903234e41082a542084e262e4ba.jpg?v=20170222082849", 
+                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/46d53903234e41082a542084e262e4ba.jpg", 
                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/fd87367a4c86b934f53471b7127afba7.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/6782836a094a5ce9e71cdbf4d658fa90.jpg?v=20170222082849", 
+                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/6782836a094a5ce9e71cdbf4d658fa90.jpg", 
                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/44f5225bbe4ef204a0840a870fb8604c.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/3b9d6ba1ef0523d273c0203b04eb9400.jpg?v=20170222082849", 
+                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/3b9d6ba1ef0523d273c0203b04eb9400.jpg", 
                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/c96e33b66c7d171dee121d2438fac8f9.jpg", 
                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/5f1dd0a32dcb32f9b8e3ea9aa58a1e40.jpg", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/f986c2312524eac7b1b34979f6622857.jpg?v=20190524145547", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/0dd49bd187f75d83e8438a5556128ea5.jpg?v=20190524145548", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/5426ce4a0ecdfb0d967a3b88f5de2d3f.jpg?v=20190524145548", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/77888b116140c6eb07648568dd1e46ed.jpg?v=20190524145548", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/f011bd8445519452f410cc4e6e2815b0.jpg?v=20190524145548", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/fc063b3c2b253ba99ce3d6da4c0e5e68.jpg?v=20190524145548", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/765f35d9d6072fdafa42b0cf1554748c.jpg?v=20190617144639", 
-                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/ee3322e7a1adb7f0db49701a838d52a6.jpg?v=20190617144639", 
+                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/f986c2312524eac7b1b34979f6622857.jpg", 
+                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/0dd49bd187f75d83e8438a5556128ea5.jpg", 
+                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/5426ce4a0ecdfb0d967a3b88f5de2d3f.jpg", 
+                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/77888b116140c6eb07648568dd1e46ed.jpg", 
+                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/f011bd8445519452f410cc4e6e2815b0.jpg", 
+                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/fc063b3c2b253ba99ce3d6da4c0e5e68.jpg", 
+                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/765f35d9d6072fdafa42b0cf1554748c.jpg", 
+                                 "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/ee3322e7a1adb7f0db49701a838d52a6.jpg", 
                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/f7b5779f0be2a34b849c1bd37ce584cc.jpg", 
                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/256e11ecfb192eac944a831c4fd1f50a.jpg", 
                                  "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/image_sp/card/l/71f79f980e6bc707da848f7339b1e1d7.jpg", 
@@ -4957,7 +4957,7 @@ kg
             var comment_tab_start = null;
             var show_premium = true;
         </script>
-        <script type='text/javascript' src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/createjs.min.js'></script>
+        <script type='text/javascript' src='../../js/createjs.min.js'></script>
         <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/98_sign_effect.js'></script>
         <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/98_sign_effect.js'></script>
         <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/2402601_sign_effect.js'></script>
@@ -4998,18 +4998,18 @@ kg
         <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/98_sign_effect.js'></script>
         <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/98_sign_effect.js'></script>
         <script src='http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/sign_effect/98_sign_effect.js'></script>
-        <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/underscore-min.js"></script>
-        <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/backbone-min.js"></script>
-        <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/ilibrary.js" type="text/javascript"></script>
-        <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/islider.js" type="text/javascript"></script>
-        <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/boombox.min.js" type="text/javascript"></script>
-        <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/min/gallery.min.js" type="text/javascript"></script>
-        <script src="http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/min/bb_loader.min.js" type="text/javascript"></script>
+        <script src="../../js/underscore-min.js"></script>
+        <script src="../../js/backbone-min.js"></script>
+        <script src="../../js/ilibrary.js" type="text/javascript"></script>
+        <script src="../../js/islider.js" type="text/javascript"></script>
+        <script src="../../js/boombox.min.js" type="text/javascript"></script>
+        <script src="../../js/min/gallery.min.js" type="text/javascript"></script>
+        <script src="../../js/min/bb_loader.min.js" type="text/javascript"></script>
         <div class="m-Top8 m-Btm8">
-            <img src="http://sp.pf-img-a.mbga.jp/12008305?url=http://125.6.169.35/idolmaster/image_sp/ui/line_hoshi.jpg" width="100%">
+            <img src="../../image_sp/ui/line_hoshi.jpg" width="100%">
         </div>
         <a id="search_cartoon" href='#' class="btn_normal_line_2 m-Cnt m-Btm12">劇場で検索</a>
-        <a href='http://sp.pf.mbga.jp/12008305/?guid=ON&amp;url=http://125.6.169.35/idolmaster/idol_gallery'>
+        <a href='../../mypage.html'>
             <div class="backLink">アイドルギャラリーTOP</div>
         </a>
         <footer>
